JumpScript/tests/baselines/reference/declFileTypeAnnotationVisibilityErrorTypeLiteral.errors.txt
tests/cases/compiler/declFileTypeAnnotationVisibilityErrorTypeLiteral.jump(10,12): error TS4025: Exported variable 'x' has or is using private name 'private1'.
tests/cases/compiler/declFileTypeAnnotationVisibilityErrorTypeLiteral.jump(11,12): error TS4025: Exported variable 'x' has or is using private name 'm2'.
tests/cases/compiler/declFileTypeAnnotationVisibilityErrorTypeLiteral.jump(12,13): error TS4025: Exported variable 'x' has or is using private name 'm2'.
tests/cases/compiler/declFileTypeAnnotationVisibilityErrorTypeLiteral.jump(13,19): error TS4025: Exported variable 'x' has or is using private name 'private1'.
tests/cases/compiler/declFileTypeAnnotationVisibilityErrorTypeLiteral.jump(14,22): error TS4025: Exported variable 'x' has or is using private name 'private1'.
tests/cases/compiler/declFileTypeAnnotationVisibilityErrorTypeLiteral.jump(15,22): error TS4025: Exported variable 'x' has or is using private name 'm2'.
tests/cases/compiler/declFileTypeAnnotationVisibilityErrorTypeLiteral.jump(17,16): error TS4024: Exported variable 'x2' has or is using name 'm2.public1' from private module 'm2'.
tests/cases/compiler/declFileTypeAnnotationVisibilityErrorTypeLiteral.jump(17,16): error TS4025: Exported variable 'x2' has or is using private name 'private1'.
tests/cases/compiler/declFileTypeAnnotationVisibilityErrorTypeLiteral.jump(24,16): error TS4024: Exported variable 'x3' has or is using name 'm2.public1' from private module 'm2'.
tests/cases/compiler/declFileTypeAnnotationVisibilityErrorTypeLiteral.jump(24,16): error TS4025: Exported variable 'x3' has or is using private name 'private1'.
tests/cases/compiler/declFileTypeAnnotationVisibilityErrorTypeLiteral.jump(27,23): error TS4025: Exported variable 'y' has or is using private name 'private1'.
tests/cases/compiler/declFileTypeAnnotationVisibilityErrorTypeLiteral.jump(27,36): error TS4025: Exported variable 'y' has or is using private name 'm2'.
tests/cases/compiler/declFileTypeAnnotationVisibilityErrorTypeLiteral.jump(28,16): error TS4024: Exported variable 'y2' has or is using name 'm2.public1' from private module 'm2'.
tests/cases/compiler/declFileTypeAnnotationVisibilityErrorTypeLiteral.jump(28,16): error TS4025: Exported variable 'y2' has or is using private name 'private1'.
tests/cases/compiler/declFileTypeAnnotationVisibilityErrorTypeLiteral.jump(31,27): error TS4025: Exported variable 'z' has or is using private name 'private1'.
tests/cases/compiler/declFileTypeAnnotationVisibilityErrorTypeLiteral.jump(31,40): error TS4025: Exported variable 'z' has or is using private name 'm2'.
tests/cases/compiler/declFileTypeAnnotationVisibilityErrorTypeLiteral.jump(32,16): error TS4024: Exported variable 'z2' has or is using name 'm2.public1' from private module 'm2'.
tests/cases/compiler/declFileTypeAnnotationVisibilityErrorTypeLiteral.jump(32,16): error TS4025: Exported variable 'z2' has or is using private name 'private1'.


==== tests/cases/compiler/declFileTypeAnnotationVisibilityErrorTypeLiteral.jump (18 errors) ====
    module m {
        class private1 {
        }
        module m2 {
            export class public1 {
            }
        }
    
        export var x: {
            x: private1;
               ~~~~~~~~
!!! error TS4025: Exported variable 'x' has or is using private name 'private1'.
            y: m2.public1;
               ~~
!!! error TS4025: Exported variable 'x' has or is using private name 'm2'.
            (): m2.public1[];
                ~~
!!! error TS4025: Exported variable 'x' has or is using private name 'm2'.
            method(): private1;
                      ~~~~~~~~
!!! error TS4025: Exported variable 'x' has or is using private name 'private1'.
            [n: number]: private1;
                         ~~~~~~~~
!!! error TS4025: Exported variable 'x' has or is using private name 'private1'.
            [s: string]: m2.public1;
                         ~~
!!! error TS4025: Exported variable 'x' has or is using private name 'm2'.
        };
        export var x2 = {
                   ~~
!!! error TS4024: Exported variable 'x2' has or is using name 'm2.public1' from private module 'm2'.
                   ~~
!!! error TS4025: Exported variable 'x2' has or is using private name 'private1'.
            x: new private1(),
            y: new m2.public1(),
            method() {
                return new private1();
            }
        };
        export var x3 = x;
                   ~~
!!! error TS4024: Exported variable 'x3' has or is using name 'm2.public1' from private module 'm2'.
                   ~~
!!! error TS4025: Exported variable 'x3' has or is using private name 'private1'.
    
        // Function type
        export var y: (a: private1) => m2.public1;
                          ~~~~~~~~
!!! error TS4025: Exported variable 'y' has or is using private name 'private1'.
                                       ~~
!!! error TS4025: Exported variable 'y' has or is using private name 'm2'.
        export var y2 = y;
                   ~~
!!! error TS4024: Exported variable 'y2' has or is using name 'm2.public1' from private module 'm2'.
                   ~~
!!! error TS4025: Exported variable 'y2' has or is using private name 'private1'.
    
        // constructor type
        export var z: new (a: private1) => m2.public1;
                              ~~~~~~~~
!!! error TS4025: Exported variable 'z' has or is using private name 'private1'.
                                           ~~
!!! error TS4025: Exported variable 'z' has or is using private name 'm2'.
        export var z2 = z;
                   ~~
!!! error TS4024: Exported variable 'z2' has or is using name 'm2.public1' from private module 'm2'.
                   ~~
!!! error TS4025: Exported variable 'z2' has or is using private name 'private1'.
    }